[gd_scene load_steps=5 format=3 uid="uid://cl2isl2r7fwe4"]

[ext_resource type="Script" path="res://source/projectile/charge_shot.gd" id="1_d3wbs"]
[ext_resource type="PackedScene" uid="uid://s0b3ai05ch2m" path="res://source/projectile/projectile_motion.tscn" id="2_82rhl"]
[ext_resource type="Texture2D" uid="uid://bmqjmks1a2pph" path="res://assets/projectiles/spaceMissiles_07/red.png" id="3_5l3kg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jaucp"]
size = Vector2(27, 52)

[node name="ChargeShot" type="Area2D"]
script = ExtResource("1_d3wbs")

[node name="ProjectileMotion" parent="." node_paths=PackedStringArray("head") instance=ExtResource("2_82rhl")]
head = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(1.08, 1.08)
texture = ExtResource("3_5l3kg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_jaucp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
